add config endpoint
